--- a/NMF_Dravnieks.ipynb
+++ b/NMF_Dravnieks.ipynb
@@ -111,30 +111,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PyxowOYYok1u"
-      },
-      "source": [
-        "## Consensus_Clustering (GitHub)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "MVtVKbrV4d8D"
-      },
-      "outputs": [],
-      "source": [
-        "# Consensus matrix\n",
-        "cluster = ConsensusCluster(cluster=KMeans, L=s_opt, K=s_opt+1, H=250, resample_proportion=0.5)\n",
-        "cluster.fit(data=W_opt, verbose=False)\n",
-        "print(cluster.Mk)\n",
-        "C_W = cluster.Mk"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "DnrLKvILoqI1"
       },
       "source": [
@@ -4298,7 +4274,8 @@
         "o-lHyGb2R3v8"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyPvEIbk8Bx0L+r9VkhnFH6b",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNKFxCcRBMy389VeFynnQZh",
       "include_colab_link": true
     },
     "kernelspec": {
