--- a/NMF_Aldrich.ipynb
+++ b/NMF_Aldrich.ipynb
@@ -967,19 +967,19 @@
         "              tol=0.0001, max_iter=200, random_state=None, alpha_W=0.01, alpha_H='same',\n",
         "              l1_ratio=0.1, verbose=0, shuffle=False)\n",
         "\n",
-        "for s in range(10,60):\n",
+        "for s in range(1,51):\n",
         "    config[\"n_components\"] = s\n",
+        "    model = NMF(**config)\n",
         "\n",
-        "    for i in range(100):\n",
-        "        V_train, V_test = train_test_split(V.T, test_size=0.5, random_state=0) # dim: 425 x 278\n",
+        "    for i in range(250):\n",
+        "        V_train, V_test = train_test_split(V.T, test_size=0.5, random_state=0) # dim: 80 x 146\n",
         "\n",
-        "        model_train = NMF(**config)\n",
-        "        model_train.fit_transform(V_train)\n",
-        "        error_cv[0,s-10,i] = model_train.reconstruction_err_\n",
+        "        H_train = model.fit_transform(V_train).T\n",
+        "        W = model.components_.T\n",
+        "        error_cv_drav[0,s-1,i] = np.linalg.norm(V_train.T - (W@H_train))\n",
         "\n",
-        "        model_test = NMF(**config)\n",
-        "        model_test.fit_transform(V_test)\n",
-        "        error_cv[1,s-10,i] = model_test.reconstruction_err_\n",
+        "        H_test = model.transform(V_test).T\n",
+        "        error_cv_drav[1,s-1,i] = np.linalg.norm(V_test.T - (W@H_test))\n",
         "\n",
         "print(error_cv)\n",
         "sio.savemat('error_cv.mat', dict(error=error_cv))"
@@ -987,15 +987,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
-        "id": "PHFEbO-atgFe"
+        "id": "PHFEbO-atgFe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3624287d-a476-4a10-ad44-02a96e3698ed"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(array([], dtype=int64), array([], dtype=int64), array([], dtype=int64))\n"
+          ]
+        }
+      ],
       "source": [
         "error_cv = sio.loadmat(\"error_cv.mat\", simplify_cells=True)[\"error\"]\n",
-        "#print(np.where(np.isinf(error_cv) == True))\n",
-        "#print(np.where(np.isnan(error_cv) == True))"
+        "print(np.where(np.isinf(error_cv)))\n",
+        "#print(np.where(np.isnan(error_cv)))"
       ]
     },
     {
@@ -5594,7 +5606,7 @@
       ],
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM0/3jsIxcBIx/6gYrQYxGE",
+      "authorship_tag": "ABX9TyN6mapHtJjuvmUQFsMG6irl",
       "include_colab_link": true
     },
     "kernelspec": {
