--- a/NMF_Dravnieks.ipynb
+++ b/NMF_Dravnieks.ipynb
@@ -313,10 +313,7 @@
       "cell_type": "code",
       "source": [
         "# outlier data[81,98]=432\n",
-        "data[81,98] = 100\n",
-        "\n",
-        "# TO DO\n",
-        "-np.sort(-data, axis=None)"
+        "data[81,98] = 100\n"
       ],
       "metadata": {
         "id": "TFR1oc0rkk7C",
@@ -336,6 +333,210 @@
           },
           "metadata": {},
           "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "odorants_str"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RML8pfAchAih",
+        "outputId": "8522dd88-9841-42ed-8355-8223916192ec"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Abhexone_high', 'Acetophenone_high', 'AcetylPyridine_high',\n",
+              "       'Adoxal_high', 'AldehydeC-16highcon_high', 'AldehydeC-16lowcon_low',\n",
+              "       'AldehydeC-18_high', 'AllylCaproate_high',\n",
+              "       'AmylAcetateiso-amylAcetat_high', 'AmylButyrate_high',\n",
+              "       ...\n",
+              "       'GarlicOil_high', 'OenanticEther_high', 'OnionOil_high',\n",
+              "       'PatchouliOil_high', 'Perfumecharlie_high', 'Phenoxaflor_high',\n",
+              "       'Pyrrolinemixture_high', 'Rosemarel_high', 'SpearmintOil_high',\n",
+              "       'BlankDipropyleneGlycolSol_high'],\n",
+              "      dtype='object', name='Stimulus', length=160)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "odors = \"\"\"Aldehyde C-16, Allyl Caproate, iso-Amyl Acetate, Amyl Butyrate, Dimethyl Benzyl Carbinyl Butyrate, Ethyl Butyrate, Ethyl Propionate, Fructone, Methyl Anthranilate, Undecylenic Acid, gamma-Valerolactone,\n",
+        "Amyl Phenyl Acetate, Auralva, iso-Bornyl Acetate, Cashmeran, Dimethyl Phenyl Ethyl Carbinol, Hydroxy Citronellal, Indolene, beta-lonone, alpha-Irone, Lyral, Methoxy-Naphthalene: 2-Methoxy, Naphthalene, Methyl Acetaldehyde Dimethyl Acetal, Musk Galaxolide, Musk Tonalid, Phenyl Ethanol, Sandiff, Santalol,\n",
+        "dI-Camphor, I-Carvone, p-Cresyl Acetate, Eucalyptol, I-Menthol, Methyl Salicylate, Safrole, Amyl Cinnamic Aldehyde Diethyl, Acetal, Citral, Citralva, Floralozone, Hexyl Cinnamic Aldehyde, Linalool, d-Limonene, Melonal, Myracaldehyde,\n",
+        "Anisole, 1-Butanol, m-Cresol, p-Cresol, p-Cresyl-iso-Butyrate, p-Cresyl Methyl Ether, Cyclohexanol, 2,5-Dimethyl, Pyrazine, Diola, Diphenyl Oxide, 1-Heptanol, 1-Hexanol, 3-Hexanol, lodoform, Methyl Furoate, para-Methyl Quinoline , Nonyl Acetate,\n",
+        "1-Octanol, Phenyl Acetylene, Terpineol, Tetraquinone, Thymol, Toluene,\n",
+        "Adoxal, Andrane, iso-Butyl Quinoline Chlorothymol, Iso-Cyclocitral, Cyclotropal, Decahydro Naphthalene, Dibutyl Amine, Grisalva, Hexanal, Hydratropic,\n",
+        "Aldehyde Dimethyl Acetal, 2-Methyl-iso Borneol, Methyl iso-Nicotinate, Nootkatone, 1-Octen-3-OL, iso-Phorone, alpha-Pinene, iso-Propyl Quinoline, Propyl Sulfide, gamma-Undecalactone,\n",
+        "Abhexone, Acetophenone, Aldehyde C-18, Anethole, Benzalde-hyde, Dihydro Pyrone, Caryophyllene (beta and gamma Isomers) , Celeriax, Cinnamic Aldehyde, Coumarin, Cuminic Aldehyde, Eugenol, Furfural, trans-1-Hexenal, ortho-Tolualdehyde, Vanillin,\n",
+        "ortho-Acetyl Pyridine, Cyclotene, 2,4-trans-trans-Decadienal, 2,3-Dimethyl Pyrazine, 2,5-Dimethyl Pyrrole, 2-Ethyl Pyrazine, Furfuryl Mercaptan, Guaiacol, Heptanal, Thienopyrimidine,\n",
+        "Zingerone,\n",
+        "Butyl Sulfide, Cyclodithalfarol, 2-Cyclohexanedione, Diethyl Sulfide, Dimethyl Trisulfide, Hexyl Amine, Pyridine, Tetrahydro Thiophene, Thioglycolic Acid, Thiophene,\n",
+        "Amyl Valerate, Butanoic Acid, Hexanoic acid, Hexyl Amine, Indole, Maritima, Methyl Thiobutyrate, Pentanoic Acid, 4-Pentenoic Acid, Phenyl Acetic Acid, Propyl Butyrate, Skatole, Trimethyl Amine, iso-Valeraldehyde, iso-Valeric Acid\"\"\"\n",
+        "odors = odors.split(\", \")\n",
+        "sorted(odors)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hDkgeVD8e5qX",
+        "outputId": "41dfece9-45f6-4778-f925-9b774465d0ae"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['1-Butanol',\n",
+              " '1-Heptanol',\n",
+              " '1-Hexanol',\n",
+              " '1-Octen-3-OL',\n",
+              " '2,3-Dimethyl Pyrazine',\n",
+              " '2,4-trans-trans-Decadienal',\n",
+              " '2,5-Dimethyl',\n",
+              " '2,5-Dimethyl Pyrrole',\n",
+              " '2-Cyclohexanedione',\n",
+              " '2-Ethyl Pyrazine',\n",
+              " '2-Methyl-iso Borneol',\n",
+              " '3-Hexanol',\n",
+              " '4-Pentenoic Acid',\n",
+              " 'Acetal',\n",
+              " 'Acetophenone',\n",
+              " 'Aldehyde C-16',\n",
+              " 'Aldehyde C-18',\n",
+              " 'Allyl Caproate',\n",
+              " 'Amyl Butyrate',\n",
+              " 'Amyl Cinnamic Aldehyde Diethyl',\n",
+              " 'Andrane',\n",
+              " 'Anethole',\n",
+              " 'Auralva',\n",
+              " 'Benzalde-hyde',\n",
+              " 'Butanoic Acid',\n",
+              " 'Caryophyllene (beta and gamma Isomers) ',\n",
+              " 'Cashmeran',\n",
+              " 'Celeriax',\n",
+              " 'Cinnamic Aldehyde',\n",
+              " 'Citral',\n",
+              " 'Citralva',\n",
+              " 'Coumarin',\n",
+              " 'Cuminic Aldehyde',\n",
+              " 'Cyclodithalfarol',\n",
+              " 'Cyclohexanol',\n",
+              " 'Cyclotene',\n",
+              " 'Cyclotropal',\n",
+              " 'Decahydro Naphthalene',\n",
+              " 'Dibutyl Amine',\n",
+              " 'Diethyl Sulfide',\n",
+              " 'Dihydro Pyrone',\n",
+              " 'Dimethyl Benzyl Carbinyl Butyrate',\n",
+              " 'Dimethyl Phenyl Ethyl Carbinol',\n",
+              " 'Dimethyl Trisulfide',\n",
+              " 'Diola',\n",
+              " 'Diphenyl Oxide',\n",
+              " 'Ethyl Butyrate',\n",
+              " 'Ethyl Propionate',\n",
+              " 'Eucalyptol',\n",
+              " 'Eugenol',\n",
+              " 'Floralozone',\n",
+              " 'Fructone',\n",
+              " 'Furfural',\n",
+              " 'Furfuryl Mercaptan',\n",
+              " 'Grisalva',\n",
+              " 'Guaiacol',\n",
+              " 'Heptanal',\n",
+              " 'Hexanal',\n",
+              " 'Hexanoic acid',\n",
+              " 'Hexyl Amine',\n",
+              " 'Hexyl Amine',\n",
+              " 'Hexyl Cinnamic Aldehyde',\n",
+              " 'Hydratropic,\\nAldehyde Dimethyl Acetal',\n",
+              " 'Hydroxy Citronellal',\n",
+              " 'I-Carvone',\n",
+              " 'I-Menthol',\n",
+              " 'Indole',\n",
+              " 'Indolene',\n",
+              " 'Iso-Cyclocitral',\n",
+              " 'Linalool',\n",
+              " 'Lyral',\n",
+              " 'Maritima',\n",
+              " 'Melonal',\n",
+              " 'Methoxy-Naphthalene: 2-Methoxy',\n",
+              " 'Methyl Acetaldehyde Dimethyl Acetal',\n",
+              " 'Methyl Anthranilate',\n",
+              " 'Methyl Furoate',\n",
+              " 'Methyl Salicylate',\n",
+              " 'Methyl Thiobutyrate',\n",
+              " 'Methyl iso-Nicotinate',\n",
+              " 'Musk Galaxolide',\n",
+              " 'Musk Tonalid',\n",
+              " 'Myracaldehyde,\\nAnisole',\n",
+              " 'Naphthalene',\n",
+              " 'Nonyl Acetate,\\n1-Octanol',\n",
+              " 'Nootkatone',\n",
+              " 'Pentanoic Acid',\n",
+              " 'Phenyl Acetic Acid',\n",
+              " 'Phenyl Acetylene',\n",
+              " 'Phenyl Ethanol',\n",
+              " 'Propyl Butyrate',\n",
+              " 'Propyl Sulfide',\n",
+              " 'Pyrazine',\n",
+              " 'Pyridine',\n",
+              " 'Safrole',\n",
+              " 'Sandiff',\n",
+              " 'Santalol,\\ndI-Camphor',\n",
+              " 'Skatole',\n",
+              " 'Terpineol',\n",
+              " 'Tetrahydro Thiophene',\n",
+              " 'Tetraquinone',\n",
+              " 'Thienopyrimidine,\\nZingerone,\\nButyl Sulfide',\n",
+              " 'Thioglycolic Acid',\n",
+              " 'Thiophene,\\nAmyl Valerate',\n",
+              " 'Thymol',\n",
+              " 'Toluene,\\nAdoxal',\n",
+              " 'Trimethyl Amine',\n",
+              " 'Undecylenic Acid',\n",
+              " 'Vanillin,\\northo-Acetyl Pyridine',\n",
+              " 'alpha-Irone',\n",
+              " 'alpha-Pinene',\n",
+              " 'beta-lonone',\n",
+              " 'd-Limonene',\n",
+              " 'gamma-Undecalactone,\\nAbhexone',\n",
+              " 'gamma-Valerolactone,\\nAmyl Phenyl Acetate',\n",
+              " 'iso-Amyl Acetate',\n",
+              " 'iso-Bornyl Acetate',\n",
+              " 'iso-Butyl Quinoline Chlorothymol',\n",
+              " 'iso-Phorone',\n",
+              " 'iso-Propyl Quinoline',\n",
+              " 'iso-Valeraldehyde',\n",
+              " 'iso-Valeric Acid',\n",
+              " 'lodoform',\n",
+              " 'm-Cresol',\n",
+              " 'ortho-Tolualdehyde',\n",
+              " 'p-Cresol',\n",
+              " 'p-Cresyl Acetate',\n",
+              " 'p-Cresyl Methyl Ether',\n",
+              " 'p-Cresyl-iso-Butyrate',\n",
+              " 'para-Methyl Quinoline ',\n",
+              " 'trans-1-Hexenal']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
         }
       ]
     },
@@ -404,17 +605,17 @@
         "\n",
         "for s in range(1,51):\n",
         "    config[\"n_components\"] = s\n",
+        "    model = NMF(**config)\n",
         "\n",
         "    for i in range(250):\n",
         "        data_train, data_test = train_test_split(data.T, test_size=0.5, random_state=0) # dim: 80 x 146\n",
         "\n",
-        "        model_train = NMF(**config)\n",
-        "        model_train.fit_transform(data_train)\n",
-        "        error_cv_drav[0,s-1,i] = model_train.reconstruction_err_\n",
+        "        H_train = model.fit_transform(data_train).T\n",
+        "        W = model.components_.T\n",
+        "        error_cv_drav[0,s-1,i] = np.linalg.norm(data_train.T - (W@H_train))\n",
         "\n",
-        "        model_test = NMF(**config)\n",
-        "        model_test.fit_transform(data_test)\n",
-        "        error_cv_drav[1,s-1,i] = model_test.reconstruction_err_\n",
+        "        H_test = model.transform(data_test).T\n",
+        "        error_cv_drav[1,s-1,i] = np.linalg.norm(data_test.T - (W@H_test))\n",
         "\n",
         "#print(error_cv_drav)\n",
         "sio.savemat('error_cv_drav_50.mat', dict(error_drav=error_cv_drav))"
@@ -4275,7 +4476,7 @@
       ],
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNKFxCcRBMy389VeFynnQZh",
+      "authorship_tag": "ABX9TyN/cde794wiSa4tv0KUjn2/",
       "include_colab_link": true
     },
     "kernelspec": {
